<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".forgotenPassAcitivty.view.ForgottenPasswordAcitivity">

    <include layout="@layout/app_bar_main" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="48dp"
            android:gravity="left"
            android:text="@string/insertEmail"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_email"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:alpha="0.7"
            android:background="@drawable/frame"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_secureq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_email"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="48dp"
            android:gravity="left"
            android:text="@string/secureQuestion"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/et_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_secureq"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:alpha="0.7"
            android:background="@drawable/frame"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_above="@id/save_data"
            android:layout_margin="32dp"
            android:src="@drawable/ic_app" />

        <Button
            android:id="@+id/save_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/et_other"
            android:background="@drawable/btn_save"
            android:text="@string/getPass"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>
</LinearLayout>